Style fixed social bar

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/comment.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/comment.less
@@ -29,7 +29,11 @@
     margin-top: 15px;
     padding-right: 3px;
 }
-
 .article-details {
     padding: 3px;
+    p{
+        font-size: 14px;
+        color: #000000;
+        line-height: 18px;
+    }
 }
