--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_userinfo.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_userinfo.less
@@ -36,7 +36,8 @@
 .user-detail {
     font-size: 13px;
     font-family: myriadpro-regular;
-    line-height: 12px;
+    line-height: 15px;
+    font-style: italic;
 }
 .date-font{
     font-size: 11px;
