--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/social-bar.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/social-bar.less
@@ -11,16 +11,15 @@
     float:left;
 }
 .social-image{
-    height: 22px;
-    width: 22px;
-    border-radius: 11px;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
     cursor: pointer;
     position:absolute;
 }
 .social-image:hover{
     height: 24px;
     width: 24px;
-    border-radius: 12px;
 }
 .left-border {
     float: left;
