--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
@@ -24,6 +24,7 @@
 @import "site/footer";
 
 /*Components Less*/
+@import "site/components/shared_status";
 @import "site/components/tab-panel.component.less";
 @import "site/components/question-details";
 @import "site/components/question-body";
