--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-body.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-body.less
@@ -44,16 +44,12 @@
 
 .questions-container {
     margin-bottom: 0;
-    padding-bottom: 15px;
-    border-top: 1px solid #eeeeee;
+    padding:15px 0;
+    border-bottom: 1px solid #eeeeee;
+    border-top:0;
 }
-
 .questions-container:hover {
     background-color: #f5f5f5;
-}
-
-.details-container {
-    margin-left: 10px;
 }
 
 h5 {
