--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/comment/comment.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/comment/comment.component.html
@@ -8,6 +8,7 @@
                 <button type="button" class="btn btn-primary" (click)="submitComment(questionId,answerId)">Comenta</button>
             </div>
         </form>
+        <div style="clear: both;"></div>
         <div class="card card-block">
             <div *ngFor="let comment of comments" class="clearfix">
                 <div *ngIf="comment">
