Style issues fixed for clean design

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile_profile-info.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile_profile-info.less
@@ -28,15 +28,12 @@
     font-family: myriadpro-regular;
 }
 
-.profile-info a {
-    display: inline-block;
-    color: @profile-info-color;
-}
-
 .profile-info > ul {
     margin-top: 40px;
 }
-
+.description-info a{
+    color:#968b8b;
+}
 .profile-info > ul > li {
     list-style: none;
     float: left;
