--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
@@ -30,7 +30,7 @@
             <img class="user-image img-circle" alt="{{topFiveUser?.name}}" src="{{topFiveUser?.imageUrl}}" (mouseover)='userover(topFiveUser?.userId)' [popover]="userInfoDetailsPopoveruser" [popoverOnHover]="true" [popoverCloseOnClickOutside]="true" />
             <div class="top-user-info">
                 <a (click)="gotoProfile(topFiveUser?.userId)" for="contain" data-toggle="dropdown" > {{topFiveUser?.name}}</a>
-                <span *ngIf="topFiveUser.occupation">&nbsp;&nbsp;{{topFiveUser.occupation}}</span>
+                <span *ngIf="topFiveUser.occupation">{{topFiveUser.occupation}}</span>
                 <div>{{topFiveUser.profileViewCount}} visitas</div>
             </div>
             <div class="clearfix"></div>
