Styling fixed for new UI issues

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Home/Index.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Home/Index.cshtml
@@ -52,7 +52,7 @@ else
             </div>
             <div>Copyright &copy; 2017 Alta Perspectiva. By <a href="http://www.nascenia.com/">Nascenia</a> </div>
         </div>
-        <div class="col-md-4 col-md-pull-4 footer-left "><span><i class="fa fa-envelope"></i> &nbsp;&nbsp; info@altaperspectiva.com </span> </div>
+        <div class="col-md-4 col-md-pull-4 footer-left "><span><i class="fa fa-envelope"></i> &nbsp;&nbsp; <a onclick="window.location.href = 'mailto:info@altaperspectiva.com?subject=mail%for%support'">info@altaperspectiva.com</a> </span> </div>
         <div class="col-md-4 footer-right">
             <div><a href="http://altaperspectiva.com/conocemas/terminos-de-uso/">Términos de uso</a> </div>
             <div><a href="http://altaperspectiva.com/conocemas/politicas-de-privacidad/">Políticas de privacidad</a></div>
