--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
@@ -6,17 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>iHaz tu preguntas sobre negocios!</title>
-    
+
     @*<script src="~/js/main.js"></script>*@
     <!-- 1. Load libraries -->
     <!-- Polyfill(s) for older browsers -->
-     
-
     @*<script src="~/libs/core-js/client/shim.min.js"></script>
-    <script src="~/libs/zone.js/dist/zone.js"></script>
-    <script src="~/libs/reflect-metadata/Reflect.js"></script>
-    <script src="~/libs/systemjs/dist/system.src.js"></script>*@
-    @*<script src="https://cdn.ckeditor.com/4.6.1/standard-all/ckeditor.js"></script>*@   
+        <script src="~/libs/zone.js/dist/zone.js"></script>
+        <script src="~/libs/reflect-metadata/Reflect.js"></script>
+        <script src="~/libs/systemjs/dist/system.src.js"></script>*@
+    @*<script src="https://cdn.ckeditor.com/4.6.1/standard-all/ckeditor.js"></script>*@
     <link href="https://cdn.quilljs.com/1.1.9/quill.snow.css" rel="stylesheet">
     <link href="https://cdn.quilljs.com/1.1.9/quill.bubble.css" rel="stylesheet">
     @* ================= *@
@@ -27,11 +25,21 @@
     <script src="~/libs/ng2-toastr/bundles/ng2-toastr.js"></script>
     <link href="~/libs/ng2-toastr/bundles/ng2-toastr.min.css" rel="stylesheet" />
     <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
+
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107395554-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments) };
+        gtag('js', new Date());
+        gtag('config', 'UA-107395554-1');
+    </script>
+
     @*<script>
-        System.import('../js/main').catch(function (err) {
-            console.error(err);
-        });
-    </script>*@
+            System.import('../js/main').catch(function (err) {
+                console.error(err);
+            });
+        </script>*@
     <environment names="Development">
         <link href="~/css/fonts/alta-fonts.css" rel="stylesheet" />
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -48,14 +56,14 @@
 </head>
 
 <body>
-    
+
     <div>
         @RenderBody()
     </div>
 
     <environment names="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>       
+        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
     </environment>
     <environment names="Staging,Production">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
@@ -65,7 +73,7 @@
         <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/bootstrap.min.js"
                 asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
                 asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
-        </script>       
+        </script>
     </environment>
     @* =========webpack========= *@
     <script src="~/dist/polyfills.bundle.js"></script>
