--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -84,12 +84,11 @@
                     </ul>
                 </div>
                 <ul id="profile-route" class="profile-leftmenu">
-                    <li><a (click)="hideMenu()" class="route link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'user-answer']" routerLinkActive="active-link"><!--Answers-->Respuestas<span>{{profileParam?.answers}}</span> </a></li>
-                    <li><a (click)="hideMenu()" class="route link-with-number" tabindex="0" id="question-route" [routerLink]="['/dashboard/viewprofile',credential.userId,'user-question']" routerLinkActive="active-link">Preguntas<!--Questions--><span>{{profileParam?.questions}}</span> </a></li>
+                    <li><a (click)="hideMenu()" class="route link-with-number"  tabindex="0" id="question-route" [routerLink]="['/dashboard/viewprofile',credential.userId,'user-answer']" routerLinkActive="active-link"><!--Answers-->Respuestas<span>{{profileParam?.answers}}</span> </a></li>
+                    <li><a (click)="hideMenu()" class="route link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'user-question']" routerLinkActive="active-link">Preguntas<!--Questions--><span>{{profileParam?.questions}}</span> </a></li>
                     <li><a (click)="hideMenu()" class="route link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'follower']" routerLinkActive="active-link">Seguidores<!--Followers--> <span>{{profileParam?.followers}}</span></a></li>
                     <li><a (click)="hideMenu()" class="route link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'following']" routerLinkActive="active-link"><!--Followings-->Siguiendo <span>{{profileParam?.followings}}</span></a></li>
                     <li><a (click)="hideMenu()" class="route" [routerLink]="['/dashboard/viewprofile',credential.userId,'bookmark']" routerLinkActive="active-link"><!--Bookmarks-->Guardadas <span>{{profileParam?.bookmarks}}</span></a></li>
-                    <!--<li><a (click)="hideMenu()" class="route" [routerLink]="['/dashboard/viewprofile',credential.userId,'posted-question']" routerLinkActive="active-link">Posted Question///Preguntas fijadas</a></li>-->
                     <li *ngIf="isOwner"><a class="route" [routerLink]="['/dashboard/viewprofile',credential.userId,'draft-answer']" routerLinkActive="active-link"><!--Draft Answers-->Borrador </a></li>
                     <li><a (click)="hideMenu()" class="route" [routerLink]="['/dashboard/viewprofile',credential.userId,'blog-create']" routerLinkActive="active-link">Blogs<span>{{profileParam?.blogs}}</span></a></li>
                     <li><a (click)="hideMenu()" class="route" [routerLink]="['/dashboard/viewprofile',credential.userId,'direct-question']" routerLinkActive="active-link"><!--Direct Question-->Pregúntame</a></li>
