Profile issue fixed and other issue fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_status.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_status.less
@@ -39,6 +39,9 @@
 .status-panel {
     .status_bar{
         float:left;
+        img{
+            width:18px;
+        }
     }
     ul.status_bar {
         li {
