--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_userinfo.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_userinfo.less
@@ -1,4 +1,4 @@
-﻿.nav-user-info{
+﻿.nav-user-info {
     margin-top: 16px;
     display: inline-block;
     color: black;
@@ -8,8 +8,9 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
 .user-info {
-    padding-left:15px;
+    padding-left: 15px;
     float: left;
     display: block;
     font-size: 12px;
@@ -21,24 +22,25 @@
     content: "";
     clear: both;
 }
+
 .navbar-right .user-image {
     height: 50px;
     width: 50px;
 }
 .user-image {
+    height: 40px;
+    width: 40px;
     border-radius: 50%;
-    margin-top: 5px;
     margin-bottom: 5px;
-    float:left;
+    float: left;
 }
-
-
 .user-detail {
     font-size: 13px;
     font-family: myriadpro-regular;
     line-height: 15px;
     font-style: italic;
 }
-.date-font{
+
+.date-font {
     font-size: 11px;
 }
