--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/comment.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/comment.less
@@ -30,7 +30,7 @@
     padding-right: 3px;
 }
 .article-details {
-    padding: 3px;
+    padding: 10px 3px 10px 3px;
     p{
         font-size: 14px;
         color: #000000;
