dash board scrolling issue fixed and spacing issue fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
@@ -31,6 +31,7 @@
 @import "site/components/dashboard_viewprofile";
 @import "site/components/dashboard_viewprofile_profile-info";
 @import "site/components/shared_userinfo";
+@import "site/components/dashboard_viewprofile_profile-category";
 
 .right-border {
     border-right: 1px solid;
