Authentication issue fixed for staging

--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Shared/_Layout.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Shared/_Layout.cshtml
@@ -29,9 +29,9 @@
             }
 
             .form-horizontal {
+                height: auto;
                 border-radius: 10px;
             }
-
             .body-minHeight {
                 min-height: 79vh;
             }
@@ -99,7 +99,6 @@
                 padding: 10px;
                 background-color: #ededed;
                 margin-top: 40px;
-                height: 305px;
             }
 
             .left-border {
