CSS issue fixed for home page

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
@@ -32,6 +32,8 @@
 @import "site/components/dashboard_viewprofile_profile-info";
 @import "site/components/shared_userinfo";
 @import "site/components/dashboard_viewprofile_profile-category";
+@import "site/components/shared_questionheader";
+@import "site/components/question_alluser";
 
 .right-border {
     border-right: 1px solid;
