--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_leftmenu.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_leftmenu.less
@@ -8,12 +8,14 @@
 .left-panel-list {
     color: #215ea7;
     font-size: 14px;
-    list-style:none;
-    overflow:hidden;
+    list-style: none;
+    overflow: hidden;
 }
-.left-panel-list li{
-    margin-bottom:5px;
+
+.left-panel-list li {
+    margin-bottom: 5px;
 }
+
 .menu-container {
     margin: 5px auto;
     width: 65%;
@@ -22,22 +24,30 @@
 }
 
 ul {
-    padding-left: 5px;
-    list-style:none;
+    list-style: none;
 }
 
 .menu-container > ul > li > a {
     color: #6b6868;
 }
 
-    .menu-container > ul > li > a:hover {
-        color: #f7a756;
-    }
+.menu-container > ul > li > a:hover {
+    color: #f7a756;
+}
 
 .question-list > a {
 }
 
 .top-user-info {
+    a {
+    color: #3b84dc;
+}
+    span {
+    color: #6b6868;
+}
+    div {
+    color: #b7b6b6;
+}
     line-height: 12px;
     max-width: 110px;
     margin-top: 5px;
@@ -45,23 +55,10 @@ ul {
     margin-left: 5px;
     word-break: break-word;
 }
-
-    .top-user-info > a {
-        color: #3b84dc;
-    }
-
-    .top-user-info > span {
-        color: #6b6868;
-    }
-
-    .top-user-info > div {
-        color: #b7b6b6;
-    }
-
 .user-list {
     padding-left: 13px;
 }
 
-    .user-list > li {
-        list-style: none;
-    }
+.user-list > li {
+    list-style: none;
+}
