--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_userinfo.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_userinfo.less
@@ -1,5 +1,5 @@
 ﻿.nav-user-info {
-    margin-top: 16px;
+    margin-top: 13px;
     display: inline-block;
     color: black;
     margin-left: 5px;
@@ -14,8 +14,9 @@
     float: left;
     display: block;
     font-size: 12px;
-    margin-top: 10px;
+    margin-top: 5px;
     font-family: myriadpro-regular;
+    max-width:80%;
 }
 
 .user-info:before {
