--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search-suggestion.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search-suggestion.component.html
@@ -2,7 +2,7 @@
     <div class="arrow-container"></div>
     <ul class="question-List">
         <li *ngFor="let item of filteredQuestionList">
-            <a (click)="selectQuestionDetails(item)">{{item.title}}</a>
+            <a (click)="selectQuestionDetails(item)">¿{{item.title}}?</a>
             <hr />
         </li>
         <li>
