--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_status.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_status.less
@@ -2,7 +2,7 @@
     display: inline-block;
     font-size: 12px;
     font-family: myriadpro-regular;
-    color: #a29996;
+    color: #999;
 }
 
 .status-panel a:hover, .status-line:hover {
@@ -88,7 +88,9 @@
     border-width: 1px 5px 10px;
     margin-left: -30px;
 }
-
+.status_bar ul{
+    padding-left:0;
+}
 h5 {
     display: inline;
 }
