--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile_profile-category.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile_profile-category.less
@@ -11,8 +11,56 @@
     font-family: 'myriadpro-regular';
 }
 
+.statistic-panel {
+    min-height: 20vh;
+    padding-right: 10%;
+    list-style: none;
+    font-size: 12px;
+}
+
+.profile-cat-img {
+    float: left;
+    height: 35px;
+    width: 35px;
+    border-radius: 10%;
+    margin-right: 12px;
+}
+
+.right-panel {
+    h2 {
+        display: inline-block;
+        border-bottom: 1px solid #d2d2ce;
+        font-size: 18px;
+        margin-bottom: 15px;
+        padding-bottom:3px;
+    }
+}
+
 .profile-rightmenu {
     h3 {
         padding-top: 3px;
+        line-height: 10px;
     }
+
+    a {
+        font-size: 12px;
+        font-weight: 700;
+    }
+
+    li {
+        margin-bottom: 15px;
+    }
+
+    div {
+        font-size: 10px;
+    }
+
+    color: #9d9d9b;
+    width: 100%;
+    margin: 0 auto;
+    list-style: none;
+}
+
+.stat-menu li {
+    margin-bottom: 0;
 }
