--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_questionheader.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_questionheader.less
@@ -8,12 +8,16 @@
     margin-right: 5px;
 }
 
-.question-header > li {
-    font-family: myriadpro-regular;
-    list-style: none;
-    float: left;
-    color: #999;
-    font-size: 13px;
+.question-header {
+    padding-left: 5px;
+
+    li {
+        font-family: myriadpro-regular;
+        list-style: none;
+        float: left;
+        color: #999;
+        font-size: 13px;
+    }
 
     a {
         color: #999;
@@ -39,7 +43,7 @@
     width: 70%;
     margin: 10px auto;
     background-color: #f9f6f6;
-    padding:10px;
+    padding: 10px;
 }
 
 .user-search {
