--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-body.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-body.less
@@ -44,14 +44,10 @@
 
 .questions-container {
     margin-bottom: 0;
-    padding:15px 0;
+    padding:15px 5px;
     border-bottom: 1px solid #eeeeee;
     border-top:0;
 }
-.questions-container:hover {
-    background-color: #f5f5f5;
-}
-
 h5 {
     display: inline;
 }
