--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/question-panel.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/question-panel.less
@@ -1,10 +1,9 @@
 .questions-container {
     position: relative;
-    padding: 0;
     margin: 0;
-    margin-bottom: 0;
     padding-bottom: 15px;
-    border-top: 1px solid #eeeeee;
+    padding:15px 0;
+    border-bottom: 1px solid #eeeeee;
 }
 
 .questions-container:hover {
