--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-stat/profile-stat.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-stat/profile-stat.component.html
@@ -1,23 +1,5 @@
-﻿<style>
-    .statistic-panel {
-        min-height: 20vh;
-        padding-right: 30%;
-    }
-    .statistic-panel ul{
-        list-style:none;
-        font-size:12px;
-    }
-    .profile-rightmenu {
-        color: #9d9d9b;
-        width: 100%;
-        margin: 0 auto;
-        border-top: 1px solid #eeeeee;
-        padding-top: 10px;
-        list-style: none;
-    }
-</style>
-<div class="statistic-panel">
-    <ul class="profile-rightmenu">
+﻿<div class="profile-rightmenu">
+    <ul class="statistic-panel stat-menu">
         <li>{{profileParam?.profileViewCount}} <!--Profile views-->Visitas al perfil </li>
         <li>{{profileParam?.questions}} <!--Answers views-->Veces leído </li>
         <li>{{profileParam?.answerLikeCount}} <!--Answers Likes-->Me gusta </li>
