--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -105,11 +105,11 @@
             </div>
         </div>
     </div>
-    <div class="col-md-3 top-spacing">
+    <div class="col-md-3 top-spacing right-panel">
         <div>
-            <h3>
+            <h2>
                 <!--Credentials-->Información personal
-            </h3>
+            </h2>
             <ul class="credential-panel">
                 <li>
                     <div class="show" *ngIf="employmentExists">
