Mobile view Registration issue fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-stat/profile-stat.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-stat/profile-stat.component.html
@@ -1,4 +1,5 @@
 ﻿<div class="profile-rightmenu">
+    <hr style="width: 80%;">
     <ul class="statistic-panel stat-menu">
         <li>{{profileParam?.profileViewCount}} <!--Profile views-->Visitas al perfil </li>
         <li>{{profileParam?.questions}} <!--Answers views-->Veces leído </li>
