--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -66,7 +66,7 @@
             <li *ngIf="_logObj.isLoggedIn"><a href="/signout"> Cerrar sesión </a></li>
 
             <li *ngIf="!_logObj.isLoggedIn"><a href="/signin">Iniciar sesión</a></li>
-            <li *ngIf="!_logObj.isLoggedIn"><a href="/signin">Regístrate <!--Register--></a></li>
+            <li *ngIf="!_logObj.isLoggedIn"><a href="/signup">Regístrate <!--Register--></a></li>
         </ul>
     </div>
     <category-left-menu [caegoryId]="categoryId"></category-left-menu>
